Update Chronos requirement and capability with more expressive name

--- a/custom_types.yaml
+++ b/custom_types.yaml
@@ -436,12 +436,12 @@ node_types:
         required: no
         type: integer
     capabilities:
-      job:
+      parent_job:
         type: tosca.capabilities.indigo.Container.Application.Docker.Chronos
         valid_source_types: [tosca.nodes.indigo.Container.Application.Docker.Chronos]
         occurrences: [0, UNBOUNDED]
     requirements:
-      - job:
+      - parent_job:
           capability: tosca.capabilities.indigo.Container.Application.Docker.Chronos
           node: tosca.nodes.indigo.Container.Application.Docker.Chronos
           relationship: tosca.relationships.DependsOn
