Fix requirements node type.

--- a/examples/indigo_job_output_upload_web.yaml
+++ b/examples/indigo_job_output_upload_web.yaml
@@ -116,7 +116,7 @@ topology_template:
             type: tosca.artifacts.Deployment.Image.Container.Docker
         requirements:
           - host: docker_runtime2
-          - job: chronos_job
+          - parent_job: chronos_job
 
 
     docker_runtime1:
