Update file to use the clues role

--- a/artifacts/ec3/ec3_install.yml
+++ b/artifacts/ec3/ec3_install.yml
@@ -1,48 +1,5 @@
 ---
 - hosts: localhost
   connection: local
-  tasks:
-    # General task
-    - name: create epel.repo
-      template: src=utils/templates/epel.repo dest=/etc/yum.repos.d/epel.repo
-      when: ansible_os_family == "RedHat"
-      
-    # CLUES2 requirements
-    - name: Apt install CLUES2 requirements in Deb system
-      apt: pkg=python-sqlite,unzip
-      when: ansible_os_family == "Debian"
-
-    - name: Yum install CLUES2 requirements in REL system
-      yum: pkg=python-sqlite2,unzip
-      when: ansible_os_family == "RedHat"
-
-    - name: Install CLUES pip requirements
-      pip: name={{item}}
-      with_items:
-      - web.py
-      - ply
-      
-    - get_url: url=https://github.com/grycap/{{item}}/archive/master.zip dest=/tmp/{{item}}.zip
-      register: result
-      until: result|success
-      retries: 5
-      delay: 1
-      with_items:
-      - clues
-      - cpyutils
-
-    # CLUES2 installation
-    - unarchive: src=/tmp/{{item}}.zip dest=/tmp copy=no creates=/tmp/{{item}}-master
-      with_items:
-      - clues
-      - cpyutils
-
-    # CLUES2 INDIGO Orchestrator plugin      
-    - get_url: url=https://raw.githubusercontent.com/indigo-dc/clues-indigo/master/indigo_orchestrator.py dest=/tmp/clues-master/cluesplugins/indigo_orchestrator.py
-      register: result
-      until: result|success
-      retries: 5
-      delay: 1
-
-    - command: python setup.py install chdir=/tmp/cpyutils-master
-    - command: python setup.py install chdir=/tmp/clues-master creates=/usr/local/bin/cluesserver
+  roles:
+  - role: alpegon.clues
