--- a/examples/elastic_cluster.yaml
+++ b/examples/elastic_cluster.yaml
@@ -22,6 +22,8 @@ topology_template:
 
     torque_front_end:
       type: tosca.nodes.indigo.LRMS.FrontEnd.Torque
+      properties:
+        wn_ips: { get_attribute: [ torque_wn, private_address ] }
       requirements:
         - host: torque_server
 
@@ -41,6 +43,8 @@ topology_template:
 
     wn_node:
       type: tosca.nodes.indigo.LRMS.WorkerNode.Torque
+      properties:
+        front_end_ip: { get_attribute: [ torque_server, private_address, 0 ] }
       capabilities:
         wn:
           properties:
