--- a/artifacts/lrms/slurm/slurm_wn_install.yml
+++ b/artifacts/lrms/slurm/slurm_wn_install.yml
@@ -1,7 +1,7 @@
 ---
 - hosts: localhost
   connection: local
-  tasks:
+  roles:
   - role: indigo-dc.slurm
     slurm_type_of_node: 'front'
     slurm_server_ip: '{{ansible_default_ipv4}}'
