--- a/artifacts/lrms/slurm/slurm_wn_install.yml
+++ b/artifacts/lrms/slurm/slurm_wn_install.yml
@@ -3,6 +3,5 @@
   connection: local
   roles:
   - role: indigo-dc.slurm
-    slurm_type_of_node: 'front'
-    slurm_server_ip: '{{ansible_default_ipv4}}'
-    slurm_wn_ips: '{{ wn_ips }}'
+    slurm_type_of_node: 'wn'
+    slurm_server_ip: '{{ slurm_front_end_ip }}'
