--- a/artifacts/lrms/slurm/slurm_fe_install.yml
+++ b/artifacts/lrms/slurm/slurm_fe_install.yml
@@ -1,7 +1,13 @@
 ---
 - hosts: localhost
   connection: local
+  vars:
+     vnode_prefix: vnode-
   roles:
+  - role: indigo-dc.nfs
+    nfs_mode: 'server'
+    nfs_exports: [{path: "/home", export: "{{ vnode_prefix }}*(fsid=0,rw,async,no_root_squash,no_subtree_check,insecure)"}]
   - role: indigo-dc.slurm
     slurm_type_of_node: 'front'
     slurm_wn_ips: '{{ wn_ips }}'
+    slurm_vnode_prefix: '{{ vnode_prefix }}'
